[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/images/enemies/pineapple-enemy.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/pineapple.gd" type="Script" id=2]
[ext_resource path="res://entities/enemies/damage_shader.gdshader" type="Shader" id=3]
[ext_resource path="res://assets/audio/87535__whiprealgood__splat.wav" type="AudioStream" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/intensity = 0.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 1088, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 1088, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Jump_Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Chest_Bump",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Take_Damage",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 11.6869, 17.954 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 11.6258, 18.0845 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 11.6258, 18.5151 )

[node name="pineapple" type="KinematicBody2D"]
scale = Vector2( 2.83242, 2.83242 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Image" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( -0.293777, -14.503 )
frames = SubResource( 21 )
animation = "Idle"
frame = 1
playing = true

[node name="damage_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="BoundingBox" type="CollisionShape2D" parent="."]
position = Vector2( 0.136806, -0.293781 )
shape = SubResource( 22 )

[node name="LeftChestBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="LeftChestBoxCollision" type="CollisionShape2D" parent="LeftChestBox"]
position = Vector2( -13.7787, 0 )
shape = SubResource( 23 )

[node name="RightChestBox" type="Area2D" parent="."]
position = Vector2( 27.1268, -0.861167 )
collision_layer = 0
collision_mask = 2

[node name="RightChestBoxCollision" type="CollisionShape2D" parent="RightChestBox"]
position = Vector2( -16.3622, -2.98023e-08 )
shape = SubResource( 24 )

[connection signal="animation_finished" from="Image" to="." method="_on_Image_animation_finished"]
[connection signal="body_entered" from="LeftChestBox" to="." method="_on_ChestBox_body_entered"]
[connection signal="body_exited" from="LeftChestBox" to="." method="_on_ChestBox_body_exited"]
[connection signal="body_entered" from="RightChestBox" to="." method="_on_ChestBox_body_entered"]
[connection signal="body_exited" from="RightChestBox" to="." method="_on_ChestBox_body_exited"]
